--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
     "node-minify": "^2.0.4",
