--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "uglifyjs": "^2.4.10",
     "validator-js": "^0.2.1",
     "vue": "^2.2.6",
+    "vue-i18n": "^7.0.5",
     "vue-material": "^0.7.1",
     "vue-router": "^2.3.0",
     "vue-template-compiler": "^2.2.6",
