--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-vue-jsx": "^3.4.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.16.0",
+    "browser-cookies": "^1.1.0",
     "cheerio": "^0.22.0",
     "concat": "^3.0.0",
     "connect": "^3.6.0",
@@ -49,6 +50,7 @@
     "serve-favicon": "~2.3.2",
     "striptags": "^3.0.1",
     "through2": "^2.0.3",
+    "toastr": "^2.1.2",
     "uglifyjs": "^2.4.10",
     "validator-js": "^0.2.1",
     "vue": "^2.2.6",
