--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue": "^2.2.6",
     "vue-i18n": "^7.0.5",
     "vue-material": "^0.7.1",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.3.0",
     "vue-template-compiler": "^2.2.6",
     "vueify": "^9.4.1",
